--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.11.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "0.69.5",
+    "react-native-elements": "^3.4.2",
+    "react-native-ionicons": "^4.x",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
